added readme text

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="wrapper">
         <header>
             <div class="title">
-                <h1>Lightblub Mania</h1>
+                <h1>Light Mania</h1>
             </div>
         </header>
         <div id="timeRemaining">
